src/test/ui/parser/issues/issue-14303-impl.stderr
error: lifetime parameters must be declared prior to type or const parameters
  --> $DIR/issue-14303-impl.rs:3:13
   |
LL | impl<'a, T, 'b> X<T> {}
   |     --------^^- help: reorder the parameters: lifetimes, then consts and types: `<'a, 'b, T>`

error: aborting due to previous error

